rholang/crates/ffi/tests/corpus/eval.txt
=======
Eval
=======

new z, stdout(`rho:io:stdout`) in {
  stdout!("hello, world!", *z)
}

{ stdout!("hello, world!", *z) }

---

(source_file
  (new
    decls: (decls
      (name_decl
        (var))
      (name_decl
        (var)
        uri: (uri_literal)))
    proc: (block
      body: (send
        name: (var)
        send_type: (send_single)
        inputs: (inputs
          (string_literal)
          (eval
            (var))))))
  (block
    body: (send
      name: (var)
      send_type: (send_single)
      inputs: (inputs
        (string_literal)
        (eval
          (var))))))
