rholang/crates/ffi/tests/corpus/pattern_matching.txt
=================
Pattern matching
=================

new x in P
for (w, x <- y) { P }
for (@{x!(Q)} <- y) { P }
for (@{for(z <- x) { Q }} <- y) { P }
contract foo(x) = { P }
match R { x!(Q) => P }
match R { contract x(y) = { Q } => P }

contract foo(@P) = { Q }
for (@{x!(P)} <- y) { Q }
for (@{for (@P <- z) { R }} <- y) { Q }
for (@{ P | R } <- y) { Q }
match R { P => Q }
match R { [P, S ...T] => Q }
match R { contract foo(x) = { P } => Q }
match R { contract foo(@S) = { x!(P + S) } => Q }

---

(source_file
  (new
    decls: (decls
      (name_decl
        (var)))
    proc: (var))
  (input
    formals: (receipts
      (receipt
        (linear_bind
          names: (names
            (var)
            (var))
          input: (simple_source
            (var)))))
    proc: (block
      body: (var)))
  (input
    formals: (receipts
      (receipt
        (linear_bind
          names: (names
            (quote
              (block
                body: (send
                  name: (var)
                  send_type: (send_single)
                  inputs: (inputs
                    (var))))))
          input: (simple_source
            (var)))))
    proc: (block
      body: (var)))
  (input
    formals: (receipts
      (receipt
        (linear_bind
          names: (names
            (quote
              (block
                body: (input
                  formals: (receipts
                    (receipt
                      (linear_bind
                        names: (names
                          (var))
                        input: (simple_source
                          (var)))))
                  proc: (block
                    body: (var))))))
          input: (simple_source
            (var)))))
    proc: (block
      body: (var)))
  (contract
    name: (var)
    formals: (names
      (var))
    proc: (block
      body: (var)))
  (match
    expression: (var)
    cases: (cases
      (case
        pattern: (send
          name: (var)
          send_type: (send_single)
          inputs: (inputs
            (var)))
        proc: (var))))
  (match
    expression: (var)
    cases: (cases
      (case
        pattern: (contract
          name: (var)
          formals: (names
            (var))
          proc: (block
            body: (var)))
        proc: (var))))
  (contract
    name: (var)
    formals: (names
      (quote
        (var)))
    proc: (block
      body: (var)))
  (input
    formals: (receipts
      (receipt
        (linear_bind
          names: (names
            (quote
              (block
                body: (send
                  name: (var)
                  send_type: (send_single)
                  inputs: (inputs
                    (var))))))
          input: (simple_source
            (var)))))
    proc: (block
      body: (var)))
  (input
    formals: (receipts
      (receipt
        (linear_bind
          names: (names
            (quote
              (block
                body: (input
                  formals: (receipts
                    (receipt
                      (linear_bind
                        names: (names
                          (quote
                            (var)))
                        input: (simple_source
                          (var)))))
                  proc: (block
                    body: (var))))))
          input: (simple_source
            (var)))))
    proc: (block
      body: (var)))
  (input
    formals: (receipts
      (receipt
        (linear_bind
          names: (names
            (quote
              (block
                body: (par
                  left: (var)
                  right: (var)))))
          input: (simple_source
            (var)))))
    proc: (block
      body: (var)))
  (match
    expression: (var)
    cases: (cases
      (case
        pattern: (var)
        proc: (var))))
  (match
    expression: (var)
    cases: (cases
      (case
        pattern: (collection
          (list
            (var)
            (var)
            cont: (var)))
        proc: (var))))
  (match
    expression: (var)
    cases: (cases
      (case
        pattern: (contract
          name: (var)
          formals: (names
            (var))
          proc: (block
            body: (var)))
        proc: (var))))
  (match
    expression: (var)
    cases: (cases
      (case
        pattern: (contract
          name: (var)
          formals: (names
            (quote
              (var)))
          proc: (block
            body: (send
              name: (var)
              send_type: (send_single)
              inputs: (inputs
                (add
                  left: (var)
                  right: (var))))))
        proc: (var)))))
