rholang/crates/tree_sitter_rholang/test/corpus/coat_check.txt
==========
Coat check
==========

new MakeCoatCheck in {
    contract MakeCoatCheck(ret) = {
      new port, table in {
        ret!(*port) |
        for(@"new", @arg, ack <= port) {
          new ticket in {
            ack!(*ticket) |
            @{*ticket | *table}!(arg)
          }
        } |
        for(@"get", @arg, ack <= port) {
          for (@value <- @{arg | *table}) {
            @{arg | *table}!(value) |
            ack!(value)
          }
        } |
        for(@"set", @arg1, @arg2, ack <= port) {
          for (_ <- @{arg1 | *table}) {
            @{arg1 | *table}!(arg2) |
            ack!(true)
          }
        }
      }
    } |

  // Usage
  new ret, get, set in {
    MakeCoatCheck!(*ret) |
    for (cc <- ret) {

      cc!("new", 0, *ret) |
      for (ticket <- ret) {
        contract get(return) = { cc!("get", *ticket, *return) } |
        contract set(@value, return) = { cc!("set", *ticket, value, *return) } |

        get!(*ret) | for(@r <- ret) {
          //r is equal to 1
          set!(1, *ret) | for(_ <- ret) {
            get!(*ret) | for(@r <- ret) {
              //r is equal to 1
              Nil
            }
          }
        }
        }
      }
    }
}

---

(source_file
  (new
    decls: (decls
      (name_decl
        (var)))
    proc: (block
      body: (par
        left: (contract
          name: (var)
          formals: (names
            (var))
          proc: (block
            body: (new
              decls: (decls
                (name_decl
                  (var))
                (name_decl
                  (var)))
              proc: (block
                body: (par
                  left: (par
                    left: (par
                      left: (send
                        name: (var)
                        send_type: (send_single)
                        inputs: (inputs
                          (eval
                            (var))))
                      right: (input
                        formals: (receipts
                          (receipt
                            (repeated_bind
                              names: (names
                                (quote
                                  (string_literal))
                                (quote
                                  (var))
                                (var))
                              input: (var))))
                        proc: (block
                          body: (new
                            decls: (decls
                              (name_decl
                                (var)))
                            proc: (block
                              body: (par
                                left: (send
                                  name: (var)
                                  send_type: (send_single)
                                  inputs: (inputs
                                    (eval
                                      (var))))
                                right: (send
                                  name: (quote
                                    (block
                                      body: (par
                                        left: (eval
                                          (var))
                                        right: (eval
                                          (var)))))
                                  send_type: (send_single)
                                  inputs: (inputs
                                    (var)))))))))
                    right: (input
                      formals: (receipts
                        (receipt
                          (repeated_bind
                            names: (names
                              (quote
                                (string_literal))
                              (quote
                                (var))
                              (var))
                            input: (var))))
                      proc: (block
                        body: (input
                          formals: (receipts
                            (receipt
                              (linear_bind
                                names: (names
                                  (quote
                                    (var)))
                                input: (simple_source
                                  (quote
                                    (block
                                      body: (par
                                        left: (var)
                                        right: (eval
                                          (var)))))))))
                          proc: (block
                            body: (par
                              left: (send
                                name: (quote
                                  (block
                                    body: (par
                                      left: (var)
                                      right: (eval
                                        (var)))))
                                send_type: (send_single)
                                inputs: (inputs
                                  (var)))
                              right: (send
                                name: (var)
                                send_type: (send_single)
                                inputs: (inputs
                                  (var)))))))))
                  right: (input
                    formals: (receipts
                      (receipt
                        (repeated_bind
                          names: (names
                            (quote
                              (string_literal))
                            (quote
                              (var))
                            (quote
                              (var))
                            (var))
                          input: (var))))
                    proc: (block
                      body: (input
                        formals: (receipts
                          (receipt
                            (linear_bind
                              names: (names
                                (wildcard))
                              input: (simple_source
                                (quote
                                  (block
                                    body: (par
                                      left: (var)
                                      right: (eval
                                        (var)))))))))
                        proc: (block
                          body: (par
                            left: (send
                              name: (quote
                                (block
                                  body: (par
                                    left: (var)
                                    right: (eval
                                      (var)))))
                              send_type: (send_single)
                              inputs: (inputs
                                (var)))
                            right: (send
                              name: (var)
                              send_type: (send_single)
                              inputs: (inputs
                                (bool_literal)))))))))))))
        right: (new
          decls: (decls
            (name_decl
              (var))
            (name_decl
              (var))
            (name_decl
              (var)))
          proc: (block
            body: (par
              left: (send
                name: (var)
                send_type: (send_single)
                inputs: (inputs
                  (eval
                    (var))))
              right: (input
                formals: (receipts
                  (receipt
                    (linear_bind
                      names: (names
                        (var))
                      input: (simple_source
                        (var)))))
                proc: (block
                  body: (par
                    left: (send
                      name: (var)
                      send_type: (send_single)
                      inputs: (inputs
                        (string_literal)
                        (long_literal)
                        (eval
                          (var))))
                    right: (input
                      formals: (receipts
                        (receipt
                          (linear_bind
                            names: (names
                              (var))
                            input: (simple_source
                              (var)))))
                      proc: (block
                        body: (par
                          left: (par
                            left: (par
                              left: (contract
                                name: (var)
                                formals: (names
                                  (var))
                                proc: (block
                                  body: (send
                                    name: (var)
                                    send_type: (send_single)
                                    inputs: (inputs
                                      (string_literal)
                                      (eval
                                        (var))
                                      (eval
                                        (var))))))
                              right: (contract
                                name: (var)
                                formals: (names
                                  (quote
                                    (var))
                                  (var))
                                proc: (block
                                  body: (send
                                    name: (var)
                                    send_type: (send_single)
                                    inputs: (inputs
                                      (string_literal)
                                      (eval
                                        (var))
                                      (var)
                                      (eval
                                        (var)))))))
                            right: (send
                              name: (var)
                              send_type: (send_single)
                              inputs: (inputs
                                (eval
                                  (var)))))
                          right: (input
                            formals: (receipts
                              (receipt
                                (linear_bind
                                  names: (names
                                    (quote
                                      (var)))
                                  input: (simple_source
                                    (var)))))
                            proc: (block
                              body: (par
                                left: (send
                                  name: (var)
                                  send_type: (send_single)
                                  inputs: (inputs
                                    (long_literal)
                                    (eval
                                      (var))))
                                right: (input
                                  formals: (receipts
                                    (receipt
                                      (linear_bind
                                        names: (names
                                          (wildcard))
                                        input: (simple_source
                                          (var)))))
                                  proc: (block
                                    body: (par
                                      left: (send
                                        name: (var)
                                        send_type: (send_single)
                                        inputs: (inputs
                                          (eval
                                            (var))))
                                      right: (input
                                        formals: (receipts
                                          (receipt
                                            (linear_bind
                                              names: (names
                                                (quote
                                                  (var)))
                                              input: (simple_source
                                                (var)))))
                                        proc: (block
                                          body: (nil))))))))))))))))))))))
